2005-04-05  Zoltan Varga  <vargaz@freemail.hu>

	* mph.h: Apply patch from the freebsd ports collection.

2005-02-10  Zoltan Varga  <vargaz@freemail.hu>

	* zlib_macros.c (create_z_stream): Explicitly check for older versions
	of zlib.

2005-02-08  Zoltan Varga  <vargaz@freemail.hu>

	* pwd.c (Mono_Posix_Syscall_getpwnam_r): Add another part missing from the last patch.

2005-02-07  Jonathan Pryor  <jonpryor@vt.edu>

	* grp.c: Oops.  Didn't see other Solaris fix in #72292.

2005-02-07  Jonathan Pryor  <jonpryor@vt.edu>

	* grp.c, pwd.c: Clear errno before calling the actual calls, as errno may
	  have a stale value, leading to spurious errors later.  Fixes #72292.

2005-02-03  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am (MPH_C_SOURCE): Move errno.c into MPH_C_SOURCE, so it's built
	  on Windows as well as Unix.

2005-02-03  Jonathan Pryor  <jonpryor@vt.edu>

	* errno.c: Mono_Posix_Syscall_SetLastError should be in Stdlib, not Syscall, 
	  since it's part of ANSI C (and errno will be used from StdioFileStream).  
	  Add Mono_Posix_Stdlib_SetLastError.  Don't remove the Syscall version, as 
	  we don't want to break Mono 1.1.4/svn users the day after release. :-)

2005-01-25  Jonathan Pryor  <jonpryor@vt.edu>

	* macros.c: Use gint64, not long, to match C# declaration.  Fixes 71152.

2005-01-23  Geoff Norton  <gnorton@customerdna.com>

	* dirent.c: Include <unistd.h> to bring off_t in on gcc4.0+OSX

2005-01-13  Jonathan Pryor  <jonpryor@vt.edu>

	* map.h: Correct Mono_Posix_OpenFlags values (they should now match 
	  x86 linux); remove unused enumerations (MountFlags, etc.).

2005-01-13  Jonathan Pryor  <jonpryor@vt.edu>

	* fstab.c: Fix HPUX support.  HPUX includes both <fstab.h> and
	  <checkpoint.h>, so we need to give preference to <checkpoint.h>.

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* fstab.c: Add support for HPUX, which uses <checklist.h>.

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>
